--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <uses-permission android:name="android.permission.SET_ALARM"/>
 
     <application
@@ -16,27 +17,6 @@
         android:theme="@style/Theme.TrackingExpenses"
         tools:targetApi="31">
         <receiver android:name=".NotificationReceiver" />
-        <activity
-            android:name=".activities.GraphicsActivity"
-            android:exported="false"
-            android:label="@string/title_activity_graphics"
-            android:theme="@style/Theme.TrackingExpenses"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".activities.ProfileActivity"
-            android:exported="false"
-            android:label="@string/title_activity_profile"
-            android:theme="@style/Theme.TrackingExpenses" />
-        <activity
-            android:name=".activities.HistoryActivity"
-            android:exported="false"
-            android:label="@string/title_activity_history"
-            android:theme="@style/Theme.TrackingExpenses" />
-        <activity
-            android:name=".activities.RegistrationActivity"
-            android:exported="false"
-            android:label="@string/title_activity_regestration"
-            android:theme="@style/Theme.TrackingExpenses" />
         <activity
             android:name=".activities.MainActivity"
             android:exported="true"
